# protean

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  check_results.py  deploy_and_train.sh  deploy_scientific_training.sh  final_gate3_check.py  generate_diverse_scenarios.py  lambda_enhanced_training.py  lambda_experiment_runner.py  lambda_scientific_training.py  lambda_training.py  pyproject.toml  requirements.txt  simple_validation.py  start_training.sh  test_cli.py
.cursor/rules/: protean-rule.mdc
.pytest_cache/v/cache/: nodeids
data/diagnostics/: operation_stats.json  validation_results.json
data/raw/: harvest_report_20250523_155846.json
data/raw/oss_dags/: astronomer_astronomer-cosmos_dev_dags_basic_cosmos_dag.py  oss_dags_manifest.csv
data/raw/pagerduty/: pagerduty_20250523_155624.json  pagerduty_20250523_155624.parquet
data/raw/postmortems/: incidentio_rss_20250523_161812.json  incidentio_rss_20250523_161812.parquet  postmortems_20250523_154259.json  postmortems_20250523_154259.parquet  postmortems_20250523_155554.json  postmortems_20250523_155554.parquet  postmortems_codesearch_20250523_162324.json  postmortems_codesearch_20250523_162324.parquet  postmortems_codesearch_20250523_163514.json  postmortems_codesearch_20250523_163514.parquet
data/raw/stackoverflow/: stackoverflow_20250523_160135.metadata.json  stackoverflow_20250523_161157.metadata.json
data/smoke/scenarios/: config_lines.txt  scenario_001_datacorruption.json  scenario_001_datacorruption.yaml  scenario_002_cloudnative.json  scenario_002_cloudnative.yaml  scenario_003_mlopsworkflow.json  scenario_003_mlopsworkflow.yaml  (+995 more)
data/synthetic/: pattern_graphs.pkl  phrase_templates.yaml
demo/reports/: performance_dashboard.html
demo/visualizations/: pattern_embedding_plot.html  simple_visualization.json
docs/: ARCHITECTURE.md
examples/: basic_usage.py
models/: pattern_embedder.pt  promotion_history.json  scientific_graphsage_embedder.pt
protean/: cli.py
protean/scripts/: fetch_real_configs.py
scripts/: build_corpus_index.py  build_pattern_graphs.py  create_final_umap.py  eval_knn.py  generate_charts.py  harvest_all.py  lambda_gpu_training_wandb.sh  lambda_protean_training.py  mine_phrase_templates.py  promote_best_model.py  quick_lambda_setup.py  train_embed_lambda.sh
scripts/ingest/: clone_oss_dags.py  fetch_incident_io.py  fetch_pagerduty.py  fetch_postmortems.py  fetch_stackoverflow.py  fetch_status_rss.py
tests/unit/: test_grammar_roundtrip.py
validation_results/: final_validation_report.md  validation_metadata.json
~/.ssh/: config
(+5645 files in other folders)
